Show.html파일에 있는 style태그 css파일로 이동

--- a/js/Show.html
+++ b/js/Show.html
@@ -4,30 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Flow Chart</title>
-    <style>
-        .node {
-            border: 1px solid #ccc;
-            padding: 5px;
-            margin: 5px;
-            background: none;
-        }
-        .link {
-            fill: none;
-            stroke: #666;
-            stroke-width: 2px;
-        }
-        .arrowHead {
-            fill: #666;
-        }
-        rect {
-            stroke: #000;
-            fill: none;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/show.css">
 </head>
 <body>
-    <svg></svg>
+    <h1 id="courseName">과목명 :</h1>
+    <input type="file" id="fileInput">
+    <div id="output"></div>
+    
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="main.js"></script>
+    <script>
+        document.getElementById('fileInput').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            const output = document.getElementById('output');
+            const courseName = document.getElementById('courseName');
+            
+            if (!file) {
+                output.innerHTML = "No file selected";
+                courseName.textContent = "과목명 : 파일이 선택되지 않았습니다.";
+                return;
+            }
+
+            // 파일 이름 출력
+            const fileName = file.name;
+            courseName.textContent = `과목명 : ${fileName}`;
+        });
+    </script>
+    <svg></svg>
 </body>
 </html>
