--- a/subject-chart.html
+++ b/subject-chart.html
@@ -11,7 +11,7 @@
         %% Subgraph example
         graph LR
         
-            subgraph "1학년 1학기"
+            subgraph "1학년"
                 subgraph "1학년 1학기"
                 A1["웹스크립트프로그래밍"]
                 A2["프로그래밍실습"]
