--- a/index.html
+++ b/index.html
@@ -25,16 +25,10 @@
 </head>
 
 <body>
-	<!-- Header Section -->
-	<header></header>
-	<!-- Body Section -->
-	<main>
-		<h1 class="text-center">HTML5 Boilerplate</h1>
-	</main>
-	<!-- Footer Section -->
-	<footer></footer>
-	<!-- Custom Js Included -->
-	<script src="js/custom.js"></script>
+	<button><a href="/Show.html"></a></button>
+	<button><a href="/input.html"></a></button>
+	<button><a href="/subject-chart.html"></a></button>
+	<button><a href="/test.html"></a></button>
 </body>
 
 </html>
