--- a/subject-chart.html
+++ b/subject-chart.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>과목 이수체계도</h1>
+    <button><a href="/index.html">돌아가기</a></button>
     <pre class="mermaid">
         %% Subgraph example
         graph LR
