--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>테스트 이수 체계도</h1>
+    <button><a href="/index.html">돌아가기</a></button>
     <canvas id="courseCanvas" width="1600" height="1200"></canvas>
     <script src="js/test.js"></script>
 </body>
