--- a/Show.html
+++ b/Show.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 id="courseName">과목명 :</h1>
-    <button><a href="/index.html"</a></button>
+    <button><a href="/index.html"</a>돌아가기</button>
     <input type="file" id="fileInput" />
     <div id="output"></div>
 
