검색 기능 추가

--- a/Show.html
+++ b/Show.html
@@ -1,38 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Course Flow Chart</title>
     <link rel="stylesheet" href="/css/show.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="/css/search.css">
+</head>
+<body>
     <h1 id="courseName">과목명 :</h1>
-    <button><a href="/index.html"</a>돌아가기</button>
+    <button id="backButton">돌아가기</button>
     <input type="file" id="fileInput" />
     <div id="output"></div>
+    <div id="searchContainer">
+        <input type="text" id="SearchTxt" placeholder="Search...">
+        <input type="button" id="SearchBtn" value="Search">
+    </div>
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="./js/main.js"></script>
     <script>
-      document
-        .getElementById('fileInput')
-        .addEventListener('change', function (event) {
-          const file = event.target.files[0];
-          const output = document.getElementById('output');
-          const courseName = document.getElementById('courseName');
+        document.getElementById('fileInput').addEventListener('change', function(event) {
+            const file = event.target.files[0];
+            const output = document.getElementById('output');
+            const courseName = document.getElementById('courseName');
 
-          if (!file) {
-            output.innerHTML = 'No file selected';
-            courseName.textContent = '과목명 : 파일이 선택되지 않았습니다.';
-            return;
-          }
+            if (!file) {
+                output.innerHTML = 'No file selected';
+                courseName.textContent = '과목명 : 파일이 선택되지 않았습니다.';
+                return;
+            }
 
-          // 파일 이름 출력
-          const fileName = file.name;
-          courseName.textContent = `과목명 : ${fileName}`;
+            // 파일 이름 출력
+            const fileName = file.name;
+            courseName.textContent = `과목명 : ${fileName}`;
+            const reader = new FileReader();
+            reader.onload = function(e) {
+                output.textContent = e.target.result;
+            };
+            reader.readAsText(file);
+        });
+
+        function doSearch(text) {
+            if (window.find(text)) {
+                console.log('Text found:', text);
+            } else {
+                console.log('Text not found:', text);
+            }
+        }
+
+        document.getElementById('SearchBtn').addEventListener('click', function() {
+            doSearch(document.getElementById('SearchTxt').value);
+        });
+
+        document.getElementById('SearchTxt').addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                doSearch(event.target.value);
+            }
+        });
+
+        document.getElementById('backButton').addEventListener('click', function() {
+            window.location.href = '/index.html';
         });
     </script>
     <svg></svg>
-  </body>
+</body>
 </html>
