--- a/subject-chart.html
+++ b/subject-chart.html
@@ -8,6 +8,16 @@
   <body>
     <h1>과목 이수체계도</h1>
     <button><a href="/index.html">돌아가기</a></button>
+
+    <br><br>
+
+    <div id="basicMajor">
+        전공기초(필수)
+    </div>
+    <div id="majorSelection">
+        공통권장과목
+    </div>
+    
     <pre class="mermaid">
         %% Subgraph example
         graph LR
