--- a/subject-chart.html
+++ b/subject-chart.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>과목 이수체계도</title>
+    <link rel="stylesheet" href="./css/subject-chart.css" />
   </head>
   <body>
     <h1>과목 이수체계도</h1>
     <button><a href="/index.html">돌아가기</a></button>
 
-    <br><br>
+    <br /><br />
 
-    <div id="basicMajor">
-        전공기초(필수)
-    </div>
-    <div id="majorSelection">
-        공통권장과목
-    </div>
-    
+    <div id="basicMajor">전공기초(필수)</div>
+    <div id="majorSelection">공통권장과목</div>
+
     <pre class="mermaid">
         %% Subgraph example
         graph LR
