--- a/subject-chart.html
+++ b/subject-chart.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>과목 이수체계도</title>
+    <link rel="stylesheet" type="text/css" href="css/subject-chart.css">
   </head>
   <body>
     <h1>과목 이수체계도</h1>
+    
     <button><a href="/index.html">돌아가기</a></button>
 
     <br><br>
