Revert "파이썬 프로그래밍 -> 객체지향 프로그래밍을 화살표 오류 수정"
This reverts commit 0b9b9d6b4d7ee75e04485048e517db360d6b85da.

--- a/subject-chart.html
+++ b/subject-chart.html
@@ -113,7 +113,7 @@
         B2 --> H2
         B3 --> C3
         B3 --> D2
-        B4 --> D3
+        B3 --> D3
         B4 --> E3
     
         C1 --> D5
@@ -197,7 +197,7 @@
         linkStyle 10 stroke:lime;
         linkStyle 11 stroke:magenta;
         linkStyle 12 stroke:magenta;
-        linkStyle 13 stroke:gold;
+        linkStyle 13 stroke:magenta;
         linkStyle 14 stroke:gold;
         linkStyle 15 stroke:green;
 
