모바일 프로그래밍의 노드 선 색상이 blue여서 방금 수정한 파이썬 프로그래밍 -> 객체 지향 프로그래밍의 노드 선 색상을 blue로 수정했습니다.

--- a/subject-chart.html
+++ b/subject-chart.html
@@ -197,7 +197,7 @@
         linkStyle 10 stroke:lime;
         linkStyle 11 stroke:magenta;
         linkStyle 12 stroke:magenta;
-        linkStyle 13 stroke:gold;
+        linkStyle 13 stroke:blue;
         linkStyle 14 stroke:gold;
         linkStyle 15 stroke:green;
 
