--- a/subject-chart.html
+++ b/subject-chart.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>과목 이수체계도</title>
     <link rel="stylesheet" href="./css/subject-chart.css" />
+    <link rel="stylesheet" href="/css/search.css">
   </head>
   <body>
     <h1>과목 이수체계도</h1>
     <button><a href="/index.html">돌아가기</a></button>
 
     <br /><br />
-
+    <div id="searchContainer">
+        <input type="text" id="SearchTxt" placeholder="Search...">
+        <input type="button" id="SearchBtn" value="Search">
+    </div>
     <div id="basicMajor">전공기초(필수)</div>
     <div id="majorSelection">공통권장과목</div>
 
