--- a/subject-chart.html
+++ b/subject-chart.html
@@ -7,6 +7,14 @@
     <title>과목 이수체계도</title>
     <link rel="stylesheet" href="./css/subject-chart.css" />
     <link rel="stylesheet" href="/css/search.css">
+
+    <style>
+        .transparent {
+            opacity: 0.2;
+            transition: opacity 0.2s;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -214,18 +222,15 @@
         linkStyle 13 stroke:blue;
         linkStyle 14 stroke:gold;
         linkStyle 15 stroke:green;
-
         linkStyle 16 stroke:darkbrown;
         linkStyle 17 stroke:magenta;
         linkStyle 18 stroke:magenta;
         linkStyle 19 stroke:green;
-
         linkStyle 20 stroke:cyan;
         linkStyle 21 stroke:darkcyan;
         linkStyle 22 stroke:blue;
         linkStyle 23 stroke:orange;
         linkStyle 24 stroke:red;
-
         linkStyle 25 stroke:magenta;
         linkStyle 26 stroke:brown;
         linkStyle 27 stroke:magenta;
@@ -254,21 +259,67 @@
     <script type="module">
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
         mermaid.initialize({ startOnLoad: true });
-        function doSearch(text) {
-            if (window.find(text)) {
-                console.log('Text found:', text);
-            } else {
-                console.log('Text not found:', text);
-            }
-        }
-        document.getElementById('SearchBtn').addEventListener('click', function () {
-            doSearch(document.getElementById('SearchTxt').value);
-        });
 
-        document.getElementById('SearchTxt').addEventListener('keydown', function (event) {
-            if (event.key === 'Enter') {
-                doSearch(event.target.value);
+        document.addEventListener('DOMContentLoaded', function () {
+            function doSearch(text) {
+                if (window.find(text)) {
+                    console.log('Text found:', text);
+                } else {
+                    console.log('Text not found:', text);
+                }
             }
+            document.getElementById('SearchBtn').addEventListener('click', function () {
+                doSearch(document.getElementById('SearchTxt').value);
+            });
+
+            document.getElementById('SearchTxt').addEventListener('keydown', function (event) {
+                if (event.key === 'Enter') {
+                    doSearch(event.target.value);
+                }
+            });
+
+            function toggleTransparency(elementsToResize) {
+                let isTransparent = false;
+                document.querySelectorAll('.node').forEach(node => {
+                    if (node.classList.contains('transparent')) {
+                        isTransparent = true;
+                    }
+                });
+
+                if (isTransparent) {
+                    document.querySelectorAll('.node').forEach(node => {
+                        node.classList.remove('transparent');
+                    });
+                } else {
+                    document.querySelectorAll('.node').forEach(node => {
+                        node.classList.add('transparent');
+                    });
+
+                    elementsToResize.forEach(id => {
+                        const element = document.querySelector(`[data-id="${id}"]`);
+                        if (element) {
+                            element.classList.remove('transparent');
+                        }
+                    });
+                }
+            }
+
+            document.getElementById('majorSelection').addEventListener('click', function () {
+                const elementsToResize = [
+                    'B1', 'B2', 'C2', 'C3', 'D1', 'D2', 'D3',
+                    'C5', 'D4', 'E2', 'E4', 'F2', 'F4', 'F5'
+                ];
+                toggleTransparency(elementsToResize);
+            });
+
+            document.getElementById('basicMajor').addEventListener('click', function () {
+                const elementsToResize = [
+                    'A2', 'A3', 'A4', 'B3', 'B4', 'I1', 'I2'
+                ];
+                toggleTransparency(elementsToResize);
+            });
+
+            console.log('Script loaded and DOM fully parsed');
         });
     </script>
 </body>
