--- a/Show.html
+++ b/Show.html
@@ -44,7 +44,7 @@
         function doSearch(text) {
             const result = window.find(text);
             if (!result) {
-                alert('일치하는 텍스트를 찾을 수 없습니다.');
+                alert('일치하는 과목을 찾을 수 없습니다.');
             } else {
                 console.log('Text found:', text);
             }
