--- a/subject-chart.html
+++ b/subject-chart.html
@@ -14,7 +14,6 @@
             transition: opacity 0.2s;
         }
     </style>
-
 </head>
 
 <body>
@@ -266,6 +265,7 @@
                     console.log('Text found:', text);
                 } else {
                     console.log('Text not found:', text);
+                    alert('일치하는 과목을 찾을 수 없습니다.');
                 }
             }
             document.getElementById('SearchBtn').addEventListener('click', function () {
