--- a/index.html
+++ b/index.html
@@ -3,17 +3,35 @@
 
 <head>
 	<meta charset="utf-8">
-	
-
 	<title>RC's HTML5 Boilerplate</title>
-
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<style>
+        body {
+            background-image: url('img/1.jpg');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        a {
+            color: inherit;
+            text-decoration: none; 
+        }
+        button {
+            margin: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+        }
+    </style>
 </head>
 
-<body>
+<body style="background-image: url('img/1.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 	<button><a href="/Show.html">show</a></button>
 	<button><a href="/input.html">input</a></button>
 	<button><a href="/subject-chart.html">subject</a></button>
 </body>
-
-</html>
