스크롤 기능 추가(재업로드)
스크롤 기능을 추가했습니다.

--- a/subject-chart.html
+++ b/subject-chart.html
@@ -321,6 +321,14 @@
 
             console.log('Script loaded and DOM fully parsed');
         });
+
+        // 페이지 로드 시 특정 섹션으로 자동 스크롤
+        window.onload = function() {
+            const element = document.getElementById("basicMajor");
+            if (element) {
+                element.scrollIntoView({ behavior: "smooth", block: "start" });
+            }
+        };
     </script>
 </body>
 
