어떤 버튼인지 설명과 버튼에 클래스 적용

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 </head>
 
 <body style="background-image: url('img/1.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
-	<button><a href="/Show.html">show</a></button>
-	<button><a href="/input.html">input</a></button>
-	<button><a href="/subject-chart.html">subject</a></button>
+    <h2>이수쳬계도 선택</h2>
+	<button class="bnt"><a href="/Show.html">show</a></button>
+	<button class="bnt"><a href="/input.html">input</a></button>
+	<button class="bnt"><a href="/subject-chart.html">subject</a></button>
 </body>
