subject-chart.html 과목명 오타 수정
캡스톤디자인 융합캡스톤디자인으로 변경했습니다.

--- a/subject-chart.html
+++ b/subject-chart.html
@@ -106,8 +106,8 @@
         end
 
         subgraph "캡스톤"
-            I1["캡스턴디자인"]
-            I2["융합캡스턴디자인"]
+            I1["캡스톤디자인"]
+            I2["융합캡스톤디자인"]
         end
         
 
