--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 
 <body style="background-image: url('img/1.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
-    <h2>이수쳬계도 선택</h2>
+    <h2>이수체계도 선택</h2>
 	<button class="bnt"><a href="/Show.html">show</a></button>
 	<button class="bnt"><a href="/subject-chart.html">subject</a></button>
 </body>
