Revert "Update subject-chart.html"
This reverts commit e4d86d3beabde1796478bd4bcfcbb7dce65535a9.

--- a/subject-chart.html
+++ b/subject-chart.html
@@ -261,22 +261,12 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             function doSearch(text) {
-                let contents = document.querySelectorAll(".nodeLabel");
-                console.log(contents);
-                let isfind = false;
-                contents.forEach(content => {
-                    if (doDeleteSpace(text) == doDeleteSpace(content.textContent)) {
-                        console.log('Text found:', text);
-                        window.find(content.textContent);
-                        isfind = true;
-                    }
-                });
-                if(isfind)
-                    return;
-                alert('일치하는 과목을 찾을 수 없습니다.');
-            }
-            function doDeleteSpace(text){
-                return text.split(' ').join('');
+                if (window.find(text)) {
+                    console.log('Text found:', text);
+                } else {
+                    console.log('Text not found:', text);
+                    alert('일치하는 과목을 찾을 수 없습니다.');
+                }
             }
             document.getElementById('SearchBtn').addEventListener('click', function () {
                 doSearch(document.getElementById('SearchTxt').value);
