--- a/subject-chart.html
+++ b/subject-chart.html
@@ -19,6 +19,7 @@
 <body>
     <h1>과목 이수체계도</h1>
     <button id="goBackBtn">돌아가기</button>
+    <button id="saveAsPngBtn">PNG로 저장</button>
 
     <br /><br />
     <div id="searchContainer">
@@ -35,7 +36,7 @@
         <button onclick="scrollToSection('4학년')">4학년</button>
     </div>
 
-    <pre class="mermaid">
+    <pre id="subjectChart" class="mermaid">
         %% Subgraph example
         graph LR
         
@@ -375,6 +376,19 @@
             const regex = new RegExp(`(${text})`, 'gi');
             content.innerHTML = content.innerHTML.replace(/(<mark>|<\/mark>)/gim, "").replace(regex, '<mark>$1</mark>');
         }
+    </script>
+
+    <!-- html2canvas 및 jsPDF 스크립트 추가 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <script>
+        document.getElementById('saveAsPngBtn').addEventListener('click', function () {
+            html2canvas(document.querySelector("#subjectChart")).then(canvas => {
+                const link = document.createElement('a');
+                link.download = 'subject-chart.png';
+                link.href = canvas.toDataURL("image/png");
+                link.click();
+            });
+        });
     </script>
 </body>
 
