--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 
 <head>
-	<meta charset="utf-8">
-	<title>RC's HTML5 Boilerplate</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<style>
+    <meta charset="utf-8">
+    <title>HNU 과목 이수체계도</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <style>
         body {
             background-image: url('img/1.jpg');
-            background-size: contain;
+            background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
             height: 100vh;
@@ -18,9 +18,10 @@
             align-items: center;
             flex-direction: column;
         }
-        a {
+
+        .button {
             color: inherit;
-            text-decoration: none; 
+            text-decoration: none;
             display: inline-block;
             margin: 10px;
             padding: 10px 20px;
@@ -30,16 +31,17 @@
             border-radius: 4px; /* 버튼 모서리 둥글게 */
             text-align: center; /* 텍스트 가운데 정렬 */
         }
-        a:hover {
+
+        .button:hover {
             background-color: #e0e0e0; /* 마우스 오버 시 버튼 배경 색상 */
         }
     </style>
 </head>
 
-<body style="background-image: url('img/1.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+<body>
     <h2>이수체계도 선택</h2>
-	<button class="bnt"><a href="/Show.html">show</a></button>
-	<button class="bnt"><a href="/subject-chart.html">subject</a></button>
+    <a href="/Show.html" class="button">show</a>
+    <a href="/subject-chart.html" class="button">subject</a>
 </body>
 
 </html>
