search.css 파일의 경로 수정
show.html 파일에서 search.css 파일의 경로를 /css/search.css에서 ./css/search.css로 수정하였습니다.

--- a/subject-chart.html
+++ b/subject-chart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>과목 이수체계도</title>
     <link rel="stylesheet" href="./css/subject-chart.css" />
-    <link rel="stylesheet" href="/css/search.css">
+    <link rel="stylesheet" href="./css/search.css">
 
     <style>
         .transparent {
