Revert "Update Show.html"
This reverts commit 6faeba1bc63ca3df0776aaf0f0e15306e87eb328.

--- a/Show.html
+++ b/Show.html
@@ -57,20 +57,20 @@
         });
 
         function doSearch(text) {
+            let contents = document.querySelectorAll("text");
+            console.log(contents);
             let isfind = false;
-            document.querySelectorAll('text')
-                .forEach((element) => {
-                    if (doDeleteSpace(element.textContent).includes(doDeleteSpace(text))) {
-                        window.find(element.textContent, false, false, false, false, false, false);
-
-                        isfind = true;
-                    }
-                });
+            contents.forEach(content => {
+                if (doDeleteSpace(text) == doDeleteSpace(content.textContent)) {
+                    console.log('Text found:', text);
+                    window.find(content.textContent);
+                    isfind = true;
+                }
+            });
             if (isfind)
                 return;
             alert('일치하는 과목을 찾을 수 없습니다.');
         }
-
         function doDeleteSpace(text) {
             return text.split(' ').join('');
         }
