--- a/Show.html
+++ b/Show.html
@@ -21,6 +21,7 @@
     <svg></svg>
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="/js/show.js"></script>
     <script>
         document.getElementById('fileInput').addEventListener('change', function (event) {
             const file = event.target.files[0];
